--- a/01_neural_network_regression_in_tensorflow.ipynb
+++ b/01_neural_network_regression_in_tensorflow.ipynb
@@ -583,7 +583,7 @@
       },
       "source": [
         "# Make a prediction with the model\n",
-        "model.predict([17.0])"
+        "model.predict(np.array([17.0]))"
       ],
       "execution_count": 10,
       "outputs": [
@@ -945,7 +945,7 @@
       },
       "source": [
         "# Try and predict what y would be if X was 17.0\n",
-        "model.predict([17.0]) # the right answer is 27.0 (y = X + 10)"
+        "model.predict(np.array([17.0])) # the right answer is 27.0 (y = X + 10)"
       ],
       "execution_count": 13,
       "outputs": [
